<resources>
    <string name="app_name">记账</string>
    <string name="title_activity_home">营业额统计</string>
    <string name="navigation_drawer_open">Open navigation drawer</string>
    <string name="navigation_drawer_close">Close navigation drawer</string>
    <string name="nav_header_title">Android Studio</string>
    <string name="nav_header_subtitle">android.studio@android.com</string>
    <string name="nav_header_desc">Navigation header</string>
    <string name="action_settings">Settings</string>

    <string name="menu_home">Home</string>
    <string name="menu_gallery">Gallery</string>
    <string name="menu_slideshow">Slideshow</string>

    <string name="home_second">Home Second</string>
    <string name="add">添加</string>
    <string name="no_">工号：</string>
    <string name="no">工号</string>
    <string name="salary">工资</string>
    <string name="salary_">工资：</string>
    <string name="performance">业绩</string>
    <string name="performance_">业绩：</string>
    <string name="date">日期</string>
    <string name="ensure">确认</string>
    <string name="cancel">取消</string>
    <string name="add_user_hint">输入工号（数字）</string>
    <string name="extract">导出</string>
    <string name="total">总计</string>
    <string name="activity_expend_statistic_name">收支月报表</string>
    <string name="activity_add_expend_name">添加支出</string>
    <string name="activity_add_performance">添加营业记录</string>
    <string name="prev_day">前一天</string>
    <string name="next_day">后一天</string>
    <string name="add_performance_hint">请输入业绩（元）</string>
    <string name="add_salary_hint">请输入工资（元）</string>
    <string name="opt">操作</string>
    <string name="type">类型</string>
    <string name="money_">金额：</string>
    <string name="money">金额</string>
    <string name="add_money_hint">请输入金额</string>
    <string name="income">营业额</string>
    <string name="recent_money">剩余金额</string>
    <string name="prev_month">前一月</string>
    <string name="next_month">后一月</string>
    <string name="living_cost">生活开支</string>
    <string name="water_cost">水电燃气</string>
    <string name="other">其他</string>
    <string name="draw">支取</string>
    <string name="group_purchase">团购</string>
    <string name="receiver_money">收钱吧</string>
    <string name="kou_bei">口碑</string>
    <string name="pos">POS 机</string>
    <string name="edit">修改</string>
    <string name="del">删除</string>
    <string name="add_no_title">添加工号</string>
    <string name="performance_recorder_"><![CDATA[营业额记录 >]]></string>
    <string name="income_expend_recorder_"><![CDATA[收支记录 >]]></string>
    <string name="add_shop_title">添加店铺名称</string>
    <string name="add_shop_hint">请输入店铺名称</string>
</resources>
