<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:orientation="vertical"
    android:paddingLeft="@dimen/dp_20"
    android:paddingTop="@dimen/dp_20"
    android:paddingRight="@dimen/dp_20"
    android:paddingBottom="@dimen/dp_16">

    <TextView
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginBottom="12dp"
        android:text="@string/add_shop_title"
        android:textColor="@color/black"
        android:textSize="18sp" />

    <EditText
        android:id="@+id/et_shop"
        android:layout_width="320dp"
        android:layout_height="wrap_content"
        android:layout_margin="4dp"
        android:autofillHints=""
        android:hint="@string/add_shop_hint"
        android:focusable="true"
        android:textSize="18sp"
        android:theme="@style/AppTheme" />

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_marginTop="12dp"
        android:gravity="right"
        tools:ignore="RtlHardcoded">

        <TextView
            android:id="@+id/v_cancel"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:paddingStart="10dp"
            android:paddingTop="6dp"
            android:paddingEnd="10dp"
            android:paddingBottom="6dp"
            android:text="@string/cancel"
            android:textColor="@color/colorPrimary"
            android:textSize="18sp" />

        <TextView
            android:id="@+id/v_ensure"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginStart="@dimen/dp_20"
            android:paddingStart="10dp"
            android:paddingTop="6dp"
            android:paddingEnd="10dp"
            android:paddingBottom="6dp"
            android:text="@string/ensure"
            android:textColor="@color/colorPrimary"
            android:textSize="18sp" />

    </LinearLayout>

</LinearLayout>