<?xml version="1.0" encoding="utf-8"?>
<RelativeLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    tools:context=".ui.add_performance.AddPerformanceActivity"
    tools:ignore="RtlSymmetry">

    <androidx.core.widget.NestedScrollView
        android:id="@+id/sv"
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        android:layout_above="@+id/ll_total"
        android:fillViewport="true"
        android:padding="8dp">


        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:orientation="vertical">


            <LinearLayout
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:gravity="center_vertical"
                android:orientation="horizontal"
                android:paddingTop="@dimen/dp_10"
                android:paddingBottom="@dimen/dp_10">

                <TextView
                    android:id="@+id/v_prev"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:paddingLeft="8dp"
                    android:paddingRight="8dp"
                    android:text="@string/prev_day"
                    android:textColor="@color/yColorPrimary"
                    android:textSize="18sp" />

                <TextView
                    android:id="@+id/v_date"
                    android:layout_width="0dp"
                    android:layout_height="match_parent"
                    android:layout_weight="1"
                    android:gravity="center"
                    android:textColor="@color/black"
                    android:textSize="22sp"
                    tools:text="2019-03-08" />

                <TextView
                    android:id="@+id/v_next"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:paddingLeft="8dp"
                    android:paddingRight="8dp"
                    android:text="@string/next_day"
                    android:textColor="@color/yColorPrimary"
                    android:textSize="18sp" />
            </LinearLayout>


            <LinearLayout
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:gravity="center"
                android:orientation="horizontal">

                <TextView
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:text="@string/no_"
                    android:textColor="@color/black"
                    android:textSize="@dimen/sp_16" />


                <TextView
                    android:id="@+id/v_add"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:layout_marginStart="@dimen/dp_10"
                    android:padding="8dp"
                    android:text="@string/add"
                    android:textColor="@color/yColorPrimary"
                    android:textSize="16sp" />

                <Space
                    android:layout_width="0dp"
                    android:layout_height="match_parent"
                    android:layout_weight="1" />
            </LinearLayout>

            <androidx.recyclerview.widget.RecyclerView
                android:id="@+id/rv_no"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_marginTop="@dimen/dp_8"
                app:layoutManager="androidx.recyclerview.widget.GridLayoutManager"
                app:spanCount="5"
                tools:itemCount="10"
                tools:listitem="@layout/item_user" />

            <LinearLayout
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:baselineAligned="true"
                android:orientation="horizontal">


                <LinearLayout
                    android:layout_width="0dp"
                    android:layout_height="wrap_content"
                    android:layout_weight="1"
                    android:gravity="center_vertical"
                    android:orientation="horizontal">

                    <TextView
                        android:layout_width="wrap_content"
                        android:layout_height="@dimen/row_height"
                        android:gravity="center"
                        android:text="@string/performance_"
                        android:textColor="@color/black" />

                    <EditText
                        android:id="@+id/et_income"
                        android:layout_width="match_parent"
                        android:layout_height="wrap_content"
                        android:autofillHints="@string/performance"
                        android:gravity="start"
                        android:hint="@string/add_performance_hint"
                        android:imeOptions="actionNext"
                        android:inputType="numberDecimal"
                        android:textColor="@color/black"
                        android:textSize="16sp"
                        tools:text="1130" />
                </LinearLayout>

                <LinearLayout
                    android:layout_width="0dp"
                    android:layout_height="wrap_content"

                    android:layout_weight="1"
                    android:gravity="center_vertical"
                    android:orientation="horizontal">

                    <TextView
                        android:layout_width="wrap_content"
                        android:layout_height="@dimen/row_height"
                        android:gravity="center"
                        android:text="@string/salary_"
                        android:textColor="@color/black" />

                    <EditText
                        android:id="@+id/et_salary"
                        android:layout_width="match_parent"
                        android:layout_height="wrap_content"
                        android:autofillHints="@string/salary"
                        android:gravity="start"
                        android:hint="@string/add_salary_hint"
                        android:imeOptions="actionNext"
                        android:inputType="numberDecimal"
                        android:textColor="@color/black"
                        android:textSize="16sp"
                        tools:text="552" />
                </LinearLayout>
            </LinearLayout>

            <LinearLayout
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_marginTop="@dimen/dp_10"
                android:background="@drawable/bg_l_t_r_b_line"
                android:orientation="horizontal"
                android:padding="@dimen/dp_1">

                <TextView
                    android:id="@+id/tv_no"
                    android:layout_width="60dp"
                    android:layout_height="@dimen/row_height"
                    android:background="@drawable/bg_r_line"
                    android:gravity="center"
                    android:text="@string/no"
                    android:textColor="@color/black" />

                <TextView
                    android:id="@+id/tv_income"
                    android:layout_width="0dp"
                    android:layout_height="match_parent"
                    android:layout_weight="1"
                    android:background="@drawable/bg_r_line"
                    android:gravity="center_vertical"
                    android:paddingStart="10dp"
                    android:text="@string/performance"
                    android:textColor="@color/black"
                    tools:ignore="RtlSymmetry" />

                <TextView
                    android:id="@+id/tv_salary"
                    android:layout_width="0dp"
                    android:layout_height="match_parent"
                    android:layout_weight="1"
                    android:background="@drawable/bg_r_line"
                    android:gravity="center_vertical"
                    android:paddingStart="10dp"
                    android:text="@string/salary"
                    android:textColor="@color/black"
                    tools:ignore="RtlSymmetry" />


                <TextView
                    android:layout_width="60dp"
                    android:layout_height="match_parent"
                    android:background="@color/white"
                    android:gravity="center"
                    android:text="@string/opt"
                    android:textColor="@color/black" />
            </LinearLayout>

            <androidx.recyclerview.widget.RecyclerView
                android:id="@+id/rv_performance"
                android:layout_width="match_parent"
                android:layout_height="match_parent"
                tools:listitem="@layout/item_bill_no" />

        </LinearLayout>

    </androidx.core.widget.NestedScrollView>

    <LinearLayout
        android:id="@+id/ll_total"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_alignParentBottom="true"
        android:layout_marginTop="8dp"
        android:background="@drawable/bg_l_t_r_b_line"
        android:elevation="@dimen/dp_4"
        android:orientation="horizontal"
        android:padding="1dp">

        <TextView

            android:layout_width="60dp"
            android:layout_height="@dimen/row_height"
            android:background="@drawable/bg_r_line"
            android:gravity="center"
            android:text="@string/total"
            android:textColor="@color/black" />

        <TextView
            android:id="@+id/tv_total_income"
            android:layout_width="0dp"
            android:layout_height="match_parent"
            android:layout_weight="1"
            android:background="@drawable/bg_r_line"
            android:gravity="center_vertical"
            android:paddingStart="10dp"
            android:textColor="@color/black"
            tools:ignore="RtlSymmetry" />

        <TextView
            android:id="@+id/tv_total_salary"
            android:layout_width="0dp"
            android:layout_height="match_parent"
            android:layout_weight="1"
            android:background="@drawable/bg_r_line"
            android:gravity="center_vertical"
            android:paddingStart="10dp"
            android:textColor="@color/black"
            tools:ignore="RtlSymmetry" />


    </LinearLayout>
</RelativeLayout>