<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:orientation="vertical"
    android:paddingTop="20dp"
    android:paddingLeft="@dimen/dp_20"
    android:paddingRight="@dimen/dp_20"
    android:paddingBottom="16dp">

    <TextView
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginBottom="12dp"
        android:text="添加工号"
        android:textSize="22sp" />

    <EditText
        android:id="@+id/et_no"
        android:layout_width="320dp"
        android:layout_height="wrap_content"
        android:layout_margin="4dp"

        android:autofillHints=""
        android:hint="@string/add_user_hint"
        android:inputType="numberDecimal"
        android:textSize="18sp" />

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_marginTop="12dp"
        android:gravity="right">

        <TextView
            android:id="@+id/v_cancel"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:paddingStart="10dp"
            android:paddingTop="6dp"
            android:paddingEnd="10dp"
            android:paddingBottom="6dp"
            android:text="@string/cancel"
            android:textColor="@color/colorAccent"
            android:textSize="18sp" />

        <TextView
            android:id="@+id/v_ensure"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginStart="@dimen/dp_20"
            android:paddingStart="10dp"
            android:paddingTop="6dp"
            android:paddingEnd="10dp"
            android:paddingBottom="6dp"
            android:text="@string/ensure"
            android:textColor="@color/colorAccent"
            android:textSize="18sp" />

    </LinearLayout>

</LinearLayout>